--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<!doctype html>
+<html lang="pt">
+  <head><meta charset="utf-8"><title>Vídeos</title></head>
+  <body>
+    <h1>Lista de vídeos</h1>
+    <ul>
+      {% for name in movies %}
+        <li>{% url {{ name }}</a></li>
+      {% empty %}
+        <li>Sem vídeos em {{ MEDIA_URL }} (coloca ficheiros em {{ MEDIA_ROOT }})</li>
+      {% endfor %}
+    </ul>
+  </body>
 </html>
