--- a/templates/play.html
+++ b/templates/play.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<!doctype html>
+<html lang="pt">
+  <head><meta charset="utf-8"><title>Reproduzir</title></head>
+  <body>
+    <h1>{{ filename }}</h1>
+    <video width="800" controls>
+      <source src="{{ MEDIA_URL }}}
+      O teu browser pode não suportar este formato.
+    </video>
+    <p>{% url Voltar</a></p>
+  </body>
 </html>
+
